--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "config": "^3.3.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dompurify": "^2.0.8",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^0.8.2",
     "md5": "^2.2.1",
     "mongodb": "^3.5.5",
     "nodemon": "^2.0.2",
     "sanitize-html": "^1.22.1",
+    "socket.io": "^2.3.0",
     "validator": "^12.2.0"
   },
   "devDependencies": {
